--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,3 +1,9 @@
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-rows: 100px auto;
+  grid-template-columns: 80px auto;
+  grid-template-areas:
+    "header header"
+    "toolbar canvas";
+  height: 100vh;
 }
