--- a/src/components/Canvas/style.scss
+++ b/src/components/Canvas/style.scss
@@ -1,7 +1,7 @@
-.canvas {
+#canvas {
   grid-area: canvas;
   display: flex;
   justify-content: center;
   border: 1px solid red;
-  margin: 2em;
+  // margin: 2em;
 }
