adjust app layout

--- a/src/components/Canvas/style.scss
+++ b/src/components/Canvas/style.scss
@@ -2,6 +2,6 @@
   grid-area: canvas;
   display: flex;
   justify-content: center;
-  border: 1px solid red;
-  // margin: 2em;
+  border: 1px solid blue;
+  min-height: 100vh;
 }
